@@ -9,14 +9,30 @@ on:
 jobs:
   release:
     runs-on: [self-hosted, linux]
-    needs: security
-    permissions: {contents: write}
+    permissions:
+      contents: write
     strategy:
       matrix: {arch: [amd64, arm64]}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
-        with: {go-version-file: 'go.mod'}
+        with:
+          go-version-file: go.mod
+      - name: Setup security tools
+        run: |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+          go install github.com/google/osv-scanner/cmd/osv-scanner@latest
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint/v2@latest
+          go install github.com/goreleaser/goreleaser@latest
+          curl -fsSL https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0_Linux-64bit.tar.gz | tar -xzO trivy > /usr/local/bin/trivy && chmod +x /usr/local/bin/trivy
+      - name: Cache Trivy DB
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/trivy
+          key: trivy-db-${{ hashFiles('**/go.sum') }}
+      - name: Security scan
+        run: trivy fs --exit-code 1 --severity CRITICAL,HIGH .
 
       - name: Build
         env:
